# ngwallet

./: .gitignore  Cargo.toml  Justfile
.github/workflows/: rust.yml
src/: .utils.rs.swp  account.rs  bip32.rs  bip39.rs  config.rs  db.rs  fee_rate.rs  keyos.rs  lib.rs  ngwallet.rs  psbt.rs  rbf.rs  send.rs  sign_message.rs  store.rs  transaction.rs  utils.rs  utxo.rs
src/lightning/: config.rs  error.rs  lsp_client.rs  mod.rs  offer.rs  payment.rs  static_invoice.rs
src/psbt/: multisig.rs  op_return.rs  p2pkh.rs  p2sh.rs  p2tr.rs  p2wpkh.rs  p2wsh.rs
tests/: ng_test_utils.rs  ng_tests.rs  remote_update_tests.rs  spend_test.rs  utils.rs
