[package]
name = "ngwallet"
version = "1.0.1"
edition = "2024"

[dependencies]
bdk_wallet = { git = "https://github.com/Foundation-Devices/bdk_wallet", rev = "c35b0fd03fa3b858b97208cf663974da019995fd", features = ["keys-bip39","test-utils"] }
bdk_electrum = { git = "https://github.com/Foundation-Devices/bdk-1", rev = "fd5b8152fdb49b3d457ec4c92591bdc45f00f43f", optional = true }
anyhow = "1.0.97"
redb = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.26"
bip39 = { version = "2.1.0", features = ["rand"], optional = true }
minicbor-serde = { version = "0.4.1", features = ["alloc"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[features]
envoy = ["dep:bdk_electrum", "dep:bip39", "bdk_wallet/rusqlite"]
