[package]
name = "ngwallet"
version = "1.1.1"
edition = "2024"

[dependencies]
bdk_wallet = { git = "https://github.com/Foundation-Devices/bdk_wallet", rev = "622143d55c8a5607b144db70fca358ceb2c648f5", features = ["keys-bip39","test-utils"] }
bdk_core = { git = "https://github.com/Foundation-Devices/bdk-1", rev = "aa0cad567e9fa3553e5649b3a682f8dfad930946" }
bdk_electrum = { git = "https://github.com/Foundation-Devices/bdk-1", rev = "aa0cad567e9fa3553e5649b3a682f8dfad930946", optional = true }
anyhow = "1.0.97"
redb = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.26"
bip39 = { version = "2.1.0", features = ["rand"], optional = true }
minicbor-serde = { version = "0.4.1", features = ["alloc"] }
rkyv = { version = "0.7", default-features = false, features = ["size_32", "alloc"] }
regex = "1.11.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[features]
envoy = ["dep:bdk_electrum", "dep:bip39", "bdk_wallet/rusqlite"]
