[package]
name = "ngwallet"
version = "1.1.1"
edition = "2024"

[dependencies]
bdk_wallet = { git = "https://github.com/Foundation-Devices/bdk_wallet", rev = "3a983ae313c661c63b2bd6bc8a68551b07d83d8a", features = ["keys-bip39","test-utils"] }
bdk_core = { git = "https://github.com/Foundation-Devices/bdk-1", rev = "aa0cad567e9fa3553e5649b3a682f8dfad930946" }
bdk_electrum = { git = "https://github.com/Foundation-Devices/bdk-1", rev = "aa0cad567e9fa3553e5649b3a682f8dfad930946", optional = true,default-features = false,features = ["use-rustls-ring"] }
anyhow = "1.0.97"
redb = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.26"
bip39 = { version = "2.2.0", features = ["rand"], optional = true }
bip85 = { version = "0.2.0", git = "https://github.com/Foundation-Devices/rust-bip85", rev = "cea22d90fcbca6d142aa26a48581511575d0dfae" }
minicbor-serde = { version = "0.4.1", features = ["alloc"] }
rkyv = { version = "0.7", default-features = false, features = ["size_32", "alloc"], optional = true }
regex = "1.11.1"
sha2 = { version = "0.10.9", optional = true }
thiserror = "2.0"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[features]
envoy = ["dep:bdk_electrum", "dep:bip39", "bdk_wallet/rusqlite"]
rkyv = ["dep:rkyv"]
sha2 = ["dep:sha2"]
